gen/GuardedParser.py
# Generated from Guarded.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GuardedParser ( Parser ):

    grammarFileName = "Guarded.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':='", "'->'", "'if'", 
                     "'fi'", "'do'", "'od'", "'{'", "'}'", "';'", "<INVALID>", 
                     "<INVALID>", "'True'", "'False'", "<INVALID>", "'*'", 
                     "'/'", "'+'", "'-'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'&'", "'|'", "'~'", "'>>'", "'<=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SEP", "WHITESPACE", 
                      "NUMBER", "TRUE", "FALSE", "ID", "MUL", "DIV", "ADD", 
                      "SUB", "GT", "LT", "GE", "LE", "EQ", "NEQ", "AND", 
                      "OR", "NEG", "IMPL", "EQUIV", "LINE_COMMENT" ]

    RULE_expression = 0
    RULE_start = 1
    RULE_operatorList = 2
    RULE_operator = 3
    RULE_assignOperator = 4
    RULE_commandList = 5
    RULE_command = 6
    RULE_ifOperator = 7
    RULE_doOperator = 8
    RULE_condition = 9

    ruleNames =  [ "expression", "start", "operatorList", "operator", "assignOperator", 
                   "commandList", "command", "ifOperator", "doOperator", 
                   "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    SEP=11
    WHITESPACE=12
    NUMBER=13
    TRUE=14
    FALSE=15
    ID=16
    MUL=17
    DIV=18
    ADD=19
    SUB=20
    GT=21
    LT=22
    GE=23
    LE=24
    EQ=25
    NEQ=26
    AND=27
    OR=28
    NEG=29
    IMPL=30
    EQUIV=31
    LINE_COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GuardedParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ImplContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def IMPL(self):
            return self.getToken(GuardedParser.IMPL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpl" ):
                listener.enterImpl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpl" ):
                listener.exitImpl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImpl" ):
                return visitor.visitImpl(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(GuardedParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(GuardedParser.MUL, 0)
        def DIV(self):
            return self.getToken(GuardedParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(GuardedParser.ADD, 0)
        def SUB(self):
            return self.getToken(GuardedParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class UnarySubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(GuardedParser.SUB, 0)
        def expression(self):
            return self.getTypedRuleContext(GuardedParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnarySub" ):
                listener.enterUnarySub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnarySub" ):
                listener.exitUnarySub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnarySub" ):
                return visitor.visitUnarySub(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(GuardedParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(GuardedParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(GuardedParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class BracketsContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(GuardedParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrackets" ):
                listener.enterBrackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrackets" ):
                listener.exitBrackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBrackets" ):
                return visitor.visitBrackets(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(GuardedParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(GuardedParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class EquivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def EQUIV(self):
            return self.getToken(GuardedParser.EQUIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquiv" ):
                listener.enterEquiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquiv" ):
                listener.exitEquiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquiv" ):
                return visitor.visitEquiv(self)
            else:
                return visitor.visitChildren(self)


    class NegateContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEG(self):
            return self.getToken(GuardedParser.NEG, 0)
        def expression(self):
            return self.getTypedRuleContext(GuardedParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegate" ):
                listener.enterNegate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegate" ):
                listener.exitNegate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegate" ):
                return visitor.visitNegate(self)
            else:
                return visitor.visitChildren(self)


    class LogicContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GuardedParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GuardedParser.ExpressionContext,i)

        def GT(self):
            return self.getToken(GuardedParser.GT, 0)
        def LT(self):
            return self.getToken(GuardedParser.LT, 0)
        def GE(self):
            return self.getToken(GuardedParser.GE, 0)
        def LE(self):
            return self.getToken(GuardedParser.LE, 0)
        def EQ(self):
            return self.getToken(GuardedParser.EQ, 0)
        def NEQ(self):
            return self.getToken(GuardedParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic" ):
                listener.enterLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic" ):
                listener.exitLogic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic" ):
                return visitor.visitLogic(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GuardedParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GuardedParser.SUB]:
                localctx = GuardedParser.UnarySubContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 21
                self.match(GuardedParser.SUB)
                self.state = 22
                self.expression(14)
                pass
            elif token in [GuardedParser.NEG]:
                localctx = GuardedParser.NegateContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 23
                self.match(GuardedParser.NEG)
                self.state = 24
                self.expression(13)
                pass
            elif token in [GuardedParser.T__0]:
                localctx = GuardedParser.BracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 25
                self.match(GuardedParser.T__0)
                self.state = 26
                self.expression(0)
                self.state = 27
                self.match(GuardedParser.T__1)
                pass
            elif token in [GuardedParser.NUMBER]:
                localctx = GuardedParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 29
                self.match(GuardedParser.NUMBER)
                pass
            elif token in [GuardedParser.ID]:
                localctx = GuardedParser.IdentifierContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 30
                self.match(GuardedParser.ID)
                pass
            elif token in [GuardedParser.TRUE]:
                localctx = GuardedParser.TrueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 31
                self.match(GuardedParser.TRUE)
                pass
            elif token in [GuardedParser.FALSE]:
                localctx = GuardedParser.FalseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                self.match(GuardedParser.FALSE)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 56
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = GuardedParser.MulDivContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 35
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 36
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==GuardedParser.MUL or _la==GuardedParser.DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 37
                        self.expression(12)
                        pass

                    elif la_ == 2:
                        localctx = GuardedParser.AddSubContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 38
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 39
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==GuardedParser.ADD or _la==GuardedParser.SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 40
                        self.expression(11)
                        pass

                    elif la_ == 3:
                        localctx = GuardedParser.LogicContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 41
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 42
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GuardedParser.GT) | (1 << GuardedParser.LT) | (1 << GuardedParser.GE) | (1 << GuardedParser.LE) | (1 << GuardedParser.EQ) | (1 << GuardedParser.NEQ))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 43
                        self.expression(10)
                        pass

                    elif la_ == 4:
                        localctx = GuardedParser.AndContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 44
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 45
                        self.match(GuardedParser.AND)
                        self.state = 46
                        self.expression(9)
                        pass

                    elif la_ == 5:
                        localctx = GuardedParser.OrContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 47
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 48
                        self.match(GuardedParser.OR)
                        self.state = 49
                        self.expression(8)
                        pass

                    elif la_ == 6:
                        localctx = GuardedParser.ImplContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 50
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 51
                        self.match(GuardedParser.IMPL)
                        self.state = 52
                        self.expression(7)
                        pass

                    elif la_ == 7:
                        localctx = GuardedParser.EquivContext(self, GuardedParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 53
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 54
                        self.match(GuardedParser.EQUIV)
                        self.state = 55
                        self.expression(6)
                        pass

             
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operatorList(self):
            return self.getTypedRuleContext(GuardedParser.OperatorListContext,0)


        def EOF(self):
            return self.getToken(GuardedParser.EOF, 0)

        def condition(self):
            return self.getTypedRuleContext(GuardedParser.ConditionContext,0)


        def getRuleIndex(self):
            return GuardedParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = GuardedParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.operatorList()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GuardedParser.T__8:
                self.state = 62
                self.condition()


            self.state = 65
            self.match(GuardedParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.OperatorContext)
            else:
                return self.getTypedRuleContext(GuardedParser.OperatorContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(GuardedParser.SEP)
            else:
                return self.getToken(GuardedParser.SEP, i)

        def getRuleIndex(self):
            return GuardedParser.RULE_operatorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperatorList" ):
                listener.enterOperatorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperatorList" ):
                listener.exitOperatorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperatorList" ):
                return visitor.visitOperatorList(self)
            else:
                return visitor.visitChildren(self)




    def operatorList(self):

        localctx = GuardedParser.OperatorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_operatorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.operator()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GuardedParser.SEP:
                self.state = 68
                self.match(GuardedParser.SEP)
                self.state = 69
                self.operator()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignOperator(self):
            return self.getTypedRuleContext(GuardedParser.AssignOperatorContext,0)


        def ifOperator(self):
            return self.getTypedRuleContext(GuardedParser.IfOperatorContext,0)


        def doOperator(self):
            return self.getTypedRuleContext(GuardedParser.DoOperatorContext,0)


        def getRuleIndex(self):
            return GuardedParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = GuardedParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operator)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GuardedParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.assignOperator()
                pass
            elif token in [GuardedParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.ifOperator()
                pass
            elif token in [GuardedParser.T__6, GuardedParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.doOperator()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GuardedParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(GuardedParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GuardedParser.RULE_assignOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignOperator" ):
                listener.enterAssignOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignOperator" ):
                listener.exitAssignOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignOperator" ):
                return visitor.visitAssignOperator(self)
            else:
                return visitor.visitChildren(self)




    def assignOperator(self):

        localctx = GuardedParser.AssignOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignOperator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(GuardedParser.ID)
            self.state = 81
            self.match(GuardedParser.T__2)
            self.state = 82
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GuardedParser.CommandContext)
            else:
                return self.getTypedRuleContext(GuardedParser.CommandContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(GuardedParser.OR)
            else:
                return self.getToken(GuardedParser.OR, i)

        def getRuleIndex(self):
            return GuardedParser.RULE_commandList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommandList" ):
                listener.enterCommandList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommandList" ):
                listener.exitCommandList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommandList" ):
                return visitor.visitCommandList(self)
            else:
                return visitor.visitChildren(self)




    def commandList(self):

        localctx = GuardedParser.CommandListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_commandList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.command()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GuardedParser.OR:
                self.state = 85
                self.match(GuardedParser.OR)
                self.state = 86
                self.command()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(GuardedParser.ExpressionContext,0)


        def operatorList(self):
            return self.getTypedRuleContext(GuardedParser.OperatorListContext,0)


        def getRuleIndex(self):
            return GuardedParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)
